--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -18,26 +18,27 @@ html{
   /* White rectangle in the middle of the screen */
   
   #main-holder {
-    width: 50%;
-    height: 70%;
+    width: 40%;
+    height: 50%;
     display: grid;
     justify-items: center;
     align-items: center;
     background-color: white;
     border-radius: 7px;
-    box-shadow: 0px 0px 5px 2px black;
+    box-shadow: 0px 0px 1px 1px black;
   }
   
   /* -------------------------------------------------------------- */
   
   #login-header {
-    font-family: 'Caveat', cursive;
+    font-family: 'Inconsolata', monospace;
     font-size: 4rem;
     font-weight: bold;
+    margin-bottom: 0%;
     
   }
   #lostgoldheader {
-    font-family: 'Caveat', cursive;
+    font-family: 'Inconsolata', monospace;
     font-size: 2rem;
 
   }
@@ -112,7 +113,7 @@ html{
     border-radius: 5px;
     color: white;
     font-weight: bold;
-    background-color: #3a3a3a;
+    background-color: #121c29;
     cursor: pointer;
     outline: none;
   }
