--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -1,5 +1,6 @@
 /* Make the page use the entire screen */
 
+
 html{
     height: 100%;
   }
@@ -11,43 +12,62 @@ html{
     display: grid;
     justify-items: center;
     align-items: center;
-    background-color: #121c29;
+    /*background-color: #121c29;*/
+    background: linear-gradient(to bottom right, #121c29, #000000);
 
 }
   
+
   /* White rectangle in the middle of the screen */
   
   #main-holder {
     width: 40%;
-    height: 50%;
+    height: 100%;
     display: grid;
     justify-items: center;
     align-items: center;
-    background-color: white;
-    border-radius: 7px;
-    box-shadow: 0px 0px 1px 1px black;
+    /* background-color: white;*/
+    /* border-radius: 7px; */
+    /* box-shadow: 0px 0px 1px 1px black;*/
   }
   
   /* -------------------------------------------------------------- */
   
   #login-header {
+
+    position: top;
+    font-family: 'Inconsolata', monospace;
+    font-size: 4rem;
+    font-weight: bold;
+    letter-spacing: 5px;
+    background-image: linear-gradient(
+   to right,
+      #462523 0,
+      #cb9b51 22%, 
+      #f6e27a 45%,
+      #f6f2c0 5%,
+      #f6e27a 55%,
+      #cb9b51 78%,
+      #462523 100%
+   );
+    color:transparent;
+    -webkit-background-clip:text;
+
+    /* align
     font-family: 'Inconsolata', monospace;
     font-size: 4rem;
     font-weight: bold;
     margin-bottom: 0%;
-    
+    */
   }
-  #lostgoldheader {
-    font-family: 'Inconsolata', monospace;
-    font-size: 2rem;
 
-  }
   
   /* -------------------------------------------------------------- */
   
   /* Middle row of the main grid (contains the error message) */
   
   #login-error-msg-holder {
+    font-size: small;
     width: 100%;
     height: 100%;
     display: grid;
@@ -58,14 +78,18 @@ html{
   /* Error message. By default it's transparent, but the opacity is controlled
   by JavaScript */
   
+#submarine {
+  margin: 0;
+}
+
   #login-error-msg {
-    width: 23%;
+    width: 100%;
     text-align: center;
     margin: 0;
-    padding: 5px;
+    padding: 2px;
     font-size: 12px;
-    font-weight: bold;
-    color: #8a0000;
+    
+    color: #901A1E;
     /*border: 1px solid #8a0000;*/
     /*background-color: #e58f8f;*/
     opacity: 0;
@@ -90,7 +114,7 @@ html{
   /* Style the login form fields' placeholders */
   
   .login-form-field::placeholder {
-    color: #3a3a3a;
+    color: #856d2a;
   }
   
   /* Style the login form fields (username and password) */
@@ -99,7 +123,7 @@ html{
     border: none;
     border-bottom: 1px solid #3a3a3a;
     margin-bottom: 10px;
-    border-radius: 3px;
+    border-radius: 5px;
     outline: none;
     padding: 0px 0px 5px 5px;
   }
@@ -109,11 +133,49 @@ html{
   #login-form-submit {
     width: 100%;
     padding: 7px;
-    border: none;
+    border: 0px;
     border-radius: 5px;
-    color: white;
+    background-image: linear-gradient(
+      to right,
+         #462523 0,
+         #cb9b51 22%, 
+         #f6e27a 45%,
+         #f6f2c0 50%,
+         #f6e27a 55%,
+         #cb9b51 78%,
+         #462523 100%
+      );
+  }
+  #username-field {
+    background-color: transparent;
+    text-align: center;
+   
+  }
+  #password-field {
+  background-color: transparent;
+    text-align: center;
+    
+  }
+  
+  #thelostgold-footertext {
+    position: bottom;
+    text-align: center;
+    font-family: 'Inconsolata', monospace;
+    font-size: 10;
     font-weight: bold;
-    background-color: #121c29;
-    cursor: pointer;
-    outline: none;
+    letter-spacing: 5rem;
+    background-image: linear-gradient(
+   to right,
+      #462523 0,
+      #cb9b51 22%, 
+      #f6e27a 45%,
+      #f6f2c0 5%,
+      #f6e27a 55%,
+      #cb9b51 78%,
+      #462523 100%
+   );
+    color:transparent;
+    -webkit-background-clip:text;
+
+
   }
