--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -6,12 +6,12 @@ html{
   }
   
   body {
+    margin: auto;
     height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
-    justify-items: center;
-    align-items: center;
+
     /*background-color: #121c29;*/
     background: linear-gradient(to bottom right, #121c29, #000000);
 
@@ -21,8 +21,8 @@ html{
   /* White rectangle in the middle of the screen */
   
   #main-holder {
-    width: 100%;
-    height: 100%;
+    margin: auto;
+    max-width: 500px;
     display: grid;
     justify-items: center;
     align-items: center;
@@ -159,7 +159,7 @@ html{
   
   #thelostgold-footertext {
     position: bottom;
-    text-align: center;
+    text-align:center;
     font-family: 'Inconsolata', monospace;
     font-size: 10;
     font-weight: bold;
