--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -166,15 +166,12 @@ html{
   }
   
   #thelostgold-footertext {
-    position: bottom;
-    text-align:center;
-    margin-top: 50px;
-    margin-bottom:30px;
-    margin-inline: 100px;
-    font-family: 'Inconsolata', monospace;
+        font-family: 'Inconsolata', monospace;
     font-size: 2rem;
     font-weight: bold;
-    letter-spacing: 5rem;
+    margin: 40px 0 0 0;
+    text-align: center;
+    letter-spacing: 10px;
     background-image: linear-gradient(
    to right,
       #462523 0,
