--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -20,10 +20,10 @@ html{
 .div {
   margin: auto;
   max-width: 500px;
-  display: grid;
+  display: inline-block;
   justify-items: center;
   align-items: center;
-  white-space:nowrap;
+  
 }
 
   #login-header {
@@ -33,7 +33,6 @@ html{
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    white-space: normal;
     
     text-align: center;
     font-family: 'Inconsolata', monospace;
