--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -8,6 +8,8 @@ html{
   }
   
   body {
+    overflow-x:hidden  // disable horizontal scrolling.
+    overflow-y:hidden  // disable vertical scrolling.
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     
