--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -6,10 +6,13 @@ html{
   
   overflow: hidden;
   }
-  
+
+html, body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
   body {
-    overflow-x:hidden  // disable horizontal scrolling.
-    overflow-y:hidden  // disable vertical scrolling.
+    position: relative;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     
