--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -7,12 +7,30 @@ html{
   overflow: hidden;
   }
 
-html, body {
-  overflow-x: hidden;
-  overflow-y: hidden;
+  html, body {
+    height: 100%;
 }
+            
+.overlay{ //your fullscreen mobile navigation 
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.8);
+
+    .overlay-content {
+        height: 100%;
+        overflow: scroll;
+    }
+}
+
+.background-content{
+    height: 100%;
+    overflow: auto;
+}
+
   body {
-    position: relative;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     
