--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -4,33 +4,12 @@
 html{
   height: 100%;
   
-  overflow: hidden;
   }
 
-  html, body {
-    height: 100%;
-}
-            
-.overlay{ //your fullscreen mobile navigation 
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    background-color: rgba(0, 0, 0, 0.8);
 
-    .overlay-content {
-        height: 100%;
-        overflow: scroll;
-    }
-}
-
-.background-content{
-    height: 100%;
-    overflow: auto;
-}
-
+  
   body {
+  
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     
@@ -88,7 +67,7 @@ html{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 350px;
+    width: 30%;
   }
   
   /* -------------------------------------------------------------- */
