--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -169,7 +169,8 @@ html{
         font-family: 'Inconsolata', monospace;
     font-size: 3rem;
     font-weight: bold;
-    margin: 60px 0 0 0;
+    margin-top: 100px;
+    
     text-align: center;
     letter-spacing: 40px;
     background-image: linear-gradient(
