--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -12,7 +12,7 @@ html{
   
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
-    
+    overflow: hidden;
 
     /*background-color: #121c29;*/
     background: linear-gradient(to bottom right, #14212e, #000000);
