--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -1,5 +1,8 @@
 /* Make the page use the entire screen */
 
+html, body {
+  overflow: hidden;
+}
 
 html{
   height: 100%;
@@ -12,7 +15,6 @@ html{
   
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden;
 
     /*background-color: #121c29;*/
     background: linear-gradient(to bottom right, #14212e, #000000);
