--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -69,7 +69,7 @@ html{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 35%;
+    width: 400px;
   }
   
   /* -------------------------------------------------------------- */
