--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -17,7 +17,7 @@ html{
     font-family: Arial, Helvetica, sans-serif;
 
     /*background-color: #121c29;*/
-    background: linear-gradient(to bottom right, #202f47, #000000);
+    background: linear-gradient(to bottom right, #142033, #000000);
 
 }
  
