--- a/lobby/custom.css
+++ b/lobby/custom.css
@@ -1,41 +1,40 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
   height: 100%;
+  
 }
 
 body {
   height: 100%;
   margin: 0;
-  padding: 10px;
+  
+  background: linear-gradient(to bottom right, #142033, #000000);
+
 }
 
-.wrapper {
-  height: 100%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (1fr)[1];
-      grid-template-rows: repeat(1, 1fr);
-  grid-gap: 10px;
+
+#robot {
+    margin-top: 50px;
+    
+    text-align: center;
 }
 
-.wrapper div.inner {
-  background-color: #eee;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-  text-align: center;
+#participants1 {
+  
+  width: 30%;
+  float: left;
+  clear: none; 
+  margin-right: 200px;
 }
-/*# sourceMappingURL=custom.css.map */
+
+#participants1 {
+  
+  width: 30%;
+  float: right;
+  clear: none; 
+  margin-left: 200px;
+
+}
