--- a/lobby/custom.scss
+++ b/lobby/custom.scss
@@ -4,12 +4,15 @@
 
 html {
   height: 100%;
+  
 }
 
 body {
   height: 100%;
   margin: 0;
   padding: 10px;
+  background: linear-gradient(to bottom right, #142033, #000000);
+
 }
 
 .wrapper {
@@ -22,7 +25,7 @@ body {
   grid-gap: 10px;
 
   div.inner {
-    background-color: #eee;
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,4 +33,10 @@ body {
     text-align: center;
   }
   
+}
+
+#robot {
+  
+  margin: auto;
+  align-self: center;
 }
