--- a/lobby/sample-multiple/css/main.css
+++ b/lobby/sample-multiple/css/main.css
@@ -15,34 +15,29 @@ button#hangupButton {
 }
 
 video {
-  --width: 45%;
+  margin: 0 0 20px 0;
+  --width: 40%;
   width: var(--width);
   height: calc(var(--width) * 0.75);
-  margin: 0 0 20px 0;
-  vertical-align: top;
 }
 
-video#localVideo {
+video#video1 {
   margin: 0 20px 20px 0;
-}
-
-div.box {
-  margin: 1em;
 }
 
 @media screen and (max-width: 400px) {
   button {
-    width: 83px;
     margin: 0 11px 10px 0;
   }
 
   video {
     height: 90px;
     margin: 0 0 10px 0;
-    width: calc(50% - 7px);
+    width: calc(50% - 8px);
   }
-  video#localVideo {
-    margin: 0 10px 20px 0;
+
+  video#video1 {
+    margin: 0 10px 10px 0;
   }
 
 }
