--- a/lobby/sample-multiple/css/main.css
+++ b/lobby/sample-multiple/css/main.css
@@ -5,26 +5,77 @@
  *  that can be found in the LICENSE file in the root of the source
  *  tree.
  */
-button {
+
+ body {
+  
+  font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(to bottom right, #142033, #000000);
+ 
+}
+.buttons {
+  text-align: center;
+}
+ button {
   margin: 0 20px 0 0;
   width: 83px;
 }
 
 button#hangupButton {
-    margin: 0;
+    margin: 5px;
 }
 
+#login-header {
+
+  position: top;
+  display: flex block;
+  justify-content: center;
+  margin: auto;
+  text-align: center;
+  width: 50%;
+  
+  text-align: center;
+  font-family: 'Inconsolata', monospace;
+  font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: 5px;
+  background-image: linear-gradient(
+ to right,
+    #462523 0,
+    #cb9b51 22%, 
+    #f6e27a 45%,
+    #f6f2c0 5%,
+    #f6e27a 55%,
+    #cb9b51 78%,
+    #462523 100%
+ );
+  color:transparent;
+  -webkit-background-clip:text;
+}
+.robot {
+  display: flex block;
+  justify-content: center;
+  text-align: center;
+}
 video {
   margin: 0 0 20px 0;
-  --width: 40%;
   width: var(--width);
   height: calc(var(--width) * 0.75);
 }
 
 video#video1 {
   margin: 0 20px 20px 0;
+  --width: 60%;
+}
+video.participant-videos {
+  margin: 0 20px 20px 0;
+  --width: 15%;
 }
 
+.wrap-participants {
+  display: flex block;
+  justify-content: center;
+  text-align: center;
+}
 @media screen and (max-width: 400px) {
   button {
     margin: 0 11px 10px 0;
