--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -6,20 +6,13 @@ html, body {
 
 html{
   height: 100%;
-  
-  }
+  background: linear-gradient( to bottom right, #142033, #000000);
+  }  
 
-
-  
   body {
-  
-    height: 100%;
     font-family: Arial, Helvetica, sans-serif;
-
-    /*background-color: #121c29;*/
-    background: linear-gradient(to bottom right, #142033, #000000);
-
 }
+
 #page-container {
   position: relative;
   min-height: 100vh;
@@ -78,7 +71,7 @@ html{
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    width:25rem;
+    width:50rem;
     
   }
   
@@ -176,8 +169,9 @@ html{
     color: #856d2a;
     
   }
+
   
-  #thelostgold-footertext {
+  .thelostgold-footertext {
         font-family: 'Inconsolata', monospace;
         position: fixed;
         bottom: 10px;
