--- a/lobby/sample-multiple/css/main.css
+++ b/lobby/sample-multiple/css/main.css
@@ -8,11 +8,13 @@
 
 html {
   height: 100%;  
+  
   background: linear-gradient( to bottom right, #142033, #000000);
 }
 
  body {
   font-family: Arial, Helvetica, sans-serif;
+  
 
 }
 
@@ -72,7 +74,7 @@ html {
 
   video#video1 {
     margin: 0 20px 20px 0;
-    --width: 55%;
+    --width: 50%;
   }
 
   video.participantvideos {
@@ -109,7 +111,7 @@ html {
       font-family: 'Inconsolata', monospace;
       position: absolute;
       bottom: 0;
-      width: 100%;
+      width: 99%;
       margin: 0 auto;
     font-size: 30px;
     font-weight: bold;
@@ -128,4 +130,12 @@ html {
     );
     color:transparent;
     -webkit-background-clip:text;
+    }
+
+    #submarine {
+    margin-top: 100px;
+      position: absolute;
+        left: 50%;
+        margin-left:-256px;
+    
     }
