--- a/lobby/sample-multiple/css/main.css
+++ b/lobby/sample-multiple/css/main.css
@@ -109,7 +109,7 @@ html {
 
   #thelostgold-footertext {
       font-family: 'Inconsolata', monospace;
-      position: absolute;
+      position: fixed;
       bottom: 0;
       width: 99%;
       margin: 0 auto;
@@ -133,9 +133,12 @@ html {
     }
 
     #submarine {
-    margin-top: 100px;
-      position: absolute;
-        left: 50%;
-        margin-left:-256px;
+    margin-top: 200px;
+    position: absolute;
+    left: 45%;
+    margin-left:-256px;
+
+
+        
     
     }
