--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -173,11 +173,10 @@ html{
   
   .thelostgold-footertext {
   
-
         font-family: 'Inconsolata', monospace;
         position: fixed;
-        bottom: 10px;
-        width: 100%;
+        bottom: 0;
+        width: 99%;
         margin: 0 auto;
       font-size: 30px;
       font-weight: bold;
