--- a/lobby/css/main.css
+++ b/lobby/css/main.css
@@ -1,36 +1,35 @@
-/*
- *  Copyright (c) 2015 The WebRTC project authors. All Rights Reserved.
- *
- *  Use of this source code is governed by a BSD-style license
- *  that can be found in the LICENSE file in the root of the source
- *  tree.
- */
 
 html {
-  height: 100%;  
-  
-  background: linear-gradient( to bottom right, #142033, #000000);
+    
+    height: 100%;
+    width: 100%;  
+    background: linear-gradient( to bottom right, #18253a, #000000);
+
 }
 
- body {
-  font-family: Arial, Helvetica, sans-serif;
-  
+body {
 
+    height: 99%;
+    width: 99%;
+    font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden; /* Hide scrollbars */
+  
 }
 
 /* Overskrift */
 
-  #login-header {
-    position: top;
-    display: flex block;
-    justify-content: center;
+#header {
+  height:10vh;
+  text-align: center;
+}
+
+#headertext {
+
+    display: block;
     margin: auto;
     text-align: center;
-    width: 50%;
-    
-    text-align: center;
     font-family: 'Inconsolata', monospace;
-    font-size: 300%;
+    font-size: 5vh;
     font-weight: bold;
     letter-spacing: 5px;
     background-image: linear-gradient(to right,
@@ -44,49 +43,88 @@ html {
       );
     color:transparent;
     -webkit-background-clip:text;
-  }
 
+  }
 
 /* Design af knapper */
-  .buttons {
-    text-align: center;
-    margin: 1%;
-  }
 
   button {
-    margin: 0 20px 0 0;
-    width: 83px;
+    width:70px;
+
   }
 
-/* CSS for video */
 
-  .robot {
-    display: flex block;
-    justify-content: center;
-    text-align: center;
+  /* CSS for video */
+
+  #wrapall {
+    display: block;
+    align-items: center;
+    padding-right: 2vh;
+    height: 85%;
+    /* background: green;*/
+    position:relative;
+    
   }
 
-  video {
-    margin: 0 0 20px 0;
-    width: var(--width);
-    height: calc(var(--width) * 0.75);
+  #video1 {
+    /*margin: 0 20px 20px 0;*/
+    /*--width: 100%;
+    --height: 100%;*/
+    top: 0px;
+    left: 0px;
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    max-width: 100%;
   }
 
-  video#video1 {
-    margin: 0 20px 20px 0;
-    --width: 50%;
+  #video2 {
+    /*margin: 0 20px 20px 0;*/
+    /*--width: 100%;
+    --height: 100%;*/
+    top: 0px;
+    left: 0px;
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+  }
+  #video3 {
+    /*margin: 0 20px 20px 0;*/
+    /*--width: 100%;
+    --height: 100%;*/
+    top: 0px;
+    left: 0px;
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    max-width: 100%;
   }
 
-  video.participantvideos {
-    margin: 10px 75px 200px 75px;
-    --width: 10%;
+  #participants {
+    
+ }
+
+  .participantvideos {
+    /*margin: 10px 75px 200px 75px;*/
+    /*--width: 10%;*/
+    width: 15vh;
+    height: 15vh;
   }
 
-  .wrapperticipants {
-    display: flex block;
-    justify-content: center;
-    text-align: center;
-  }
+
+  #Participant1 {  
+    position: absolute;
+    bottom: 1vh;
+    right: 28vh;
+}
+
+#Participant2 {
+    position: absolute;
+    bottom: 1vh;
+    right: 44.5vh;
+}
+
 
   @media screen and (max-width: 400px) {
       button {
@@ -107,13 +145,17 @@ html {
 
 /* CSS for footer */
 
+#footer {
+  height: 5%;
+}
+
   #thelostgold-footertext {
       font-family: 'Inconsolata', monospace;
       position: fixed;
       bottom: 0;
       width: 99%;
       margin: 0 auto;
-    font-size: 30px;
+    font-size: 3vh;
     font-weight: bold;
     text-align: center;
     margin-inline-end: 5%;
