--- a/login-page/login-page.css
+++ b/login-page/login-page.css
@@ -6,7 +6,7 @@ html, body {
 
 html{
   height: 100%;
-  background: linear-gradient( to bottom right, #142033, #000000);
+  background: linear-gradient( to bottom right, #18253a, #000000);
   }  
 
   body {
