--- a/lobby/css/main.css
+++ b/lobby/css/main.css
@@ -12,7 +12,7 @@ body {
     height: 99%;
     width: 99%;
     font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden; /* Hide scrollbars */
+    overflow: hidden;
   margin: auto;
 }
 
@@ -63,9 +63,11 @@ body {
 
     display: block;
     align-items: center;
+    width: 75%;
     height: 85%;
     /* background: green;*/
     position:relative;
+    margin: auto;
     
   }
 
@@ -157,6 +159,8 @@ height: 10vh;
 
 #footer {
   height: 5%;
+  position: absolute;
+  bottom: 0;
 }
 
   #thelostgold-footertext {
@@ -188,9 +192,35 @@ height: 10vh;
     margin-top: 200px;
     position: absolute;
     left: 45%;
-    margin-left:-256px;
+    margin-left:-245px;
+       
+    }
 
-
+    #fullscreenbutton {
+      width: 135px;
+      background-image: linear-gradient(
+        to right,
+        #462523 0,
+        #cb9b51 22%, 
+        #f6e27a 45%,
+        #f6f2c0 5%,
+        #f6e27a 55%,
+        #cb9b51 78%,
+        #462523 100%
+        );
+        color:transparent;
+        opacity: 0.7;
+        -webkit-background-clip:text;
         
-    
+        font-weight: bold;
+        border: 0;
+        display: block;
+        position: absolute;
+        bottom: 20px;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     }
