--- a/lobby/css/main.css
+++ b/lobby/css/main.css
@@ -62,7 +62,7 @@ body {
     display: block;
     align-items: center;
     width: 100%;
-    height: 80%;
+    height: 50%;
     /* background: green;*/
     position:relative;
     
@@ -95,6 +95,7 @@ body {
     /*margin: 0 20px 20px 0;*/
     /*--width: 100%;
     --height: 100%;*/
+    min-width: 100%;
     max-height: 100%;
     max-width: 100%;
 
