--- a/lobby/css/main.css
+++ b/lobby/css/main.css
@@ -48,7 +48,7 @@ body {
 
 /* Design af knapper */
 
-  button {
+  .webrtcbuttons {
     width:70px;
     
 
@@ -61,8 +61,9 @@ body {
 
     display: block;
     align-items: center;
-    width: 100%;
-    height: 50%;
+    width: 98%;
+    left: 1%;
+    height: 70%;
     /* background: green;*/
     position:relative;
     
@@ -148,22 +149,19 @@ height: 10vh;
 /* CSS for footer */
 
 #footer {
-  height: 5%;
-  position: absolute;
-  bottom: 0;
+  margin-top: 10vh;
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 
   #thelostgold-footertext {
       font-family: 'Inconsolata', monospace;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
+      margin: auto;
+      
       
     font-size: 3vh;
     font-weight: bold;
-    text-align: center;
-    margin-left:15px;
-    margin-inline-end: 5%;
     letter-spacing: 30px;
     background-image: linear-gradient(
     to right,
@@ -180,10 +178,12 @@ height: 10vh;
     }
 
     #submarine {
-    margin-top: 200px;
+    margin-top: 100px;
     position: absolute;
+    width: 60%;
+    
     left: 45%;
-    margin-left:-245px;
+    margin-left:-100px;
        
     }
 
@@ -201,12 +201,13 @@ height: 10vh;
         );
         color:transparent;
         opacity: 0.7;
+
         -webkit-background-clip:text;
-        
+
         font-weight: bold;
-        border: 0;
-        position: absolute;
-        bottom: 20px;
+        border: 0;        
+        position: relative;
+        
     left: 50%;
     margin-left:-75px;
     
