--- a/lobby/css/main.css
+++ b/lobby/css/main.css
@@ -214,122 +214,25 @@ height: 10vh;
     
     }
 
-
-
-
-    * {
-	font-family: "Montserrat", sans-serif !important;
-  box-sizing: content-box;
-}
-
-.outer-circle {
-  position: relative;
-  height: 200px;
-  width: 200px;
-  background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
-  border-radius: 50%;
-  animation: rotate 1.5s linear infinite;
-}
-
-.outer-circle span {
-  position: absolute;
-  height: 200px;
-  width: 200px;
-  background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
-  border-radius: 50%;
-}
-
-span:nth-child(1) {
-  filter: blur(5px);
-}
-
-span:nth-child(2) {
-  filter: blur(10px);
-}
-
-span:nth-child(3) {
-  filter: blur(25px);
-}
-
-span:nth-child(4) {
-  filter: blur(150px);
-}
-
-.inner-circle {
-  height: 180px;
-  width: 180px;
-  position: absolute;
-  background: black;
-  top: 10px;
-  left: 10px;
-  border-radius: 50%;
-  z-index: 9;
-}
-
-@keyframes rotate {
-  0% {
-    filter: hue-rotate(0deg);
+    .outer_circle {
+      position: relative;
+      margin: 50px;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background: #ffffff;
   }
-  100% {
-    filter: hue-rotate(360deg);
+    
+  .inner_circle {
+      background-image: linear-gradient(
+               to bottom, rgb(9, 112, 26) 0%,
+               rgb(21, 255, 0) 100%);
+      content: '';
+      position: absolute;
+      top: -20px;
+      bottom: -20px;
+      right: -20px;
+      left: -20px;
+      z-index: -1;
+      border-radius: inherit;
   }
-}
-
-/* css graded borders */
-
-* {
-	font-family: "Montserrat", sans-serif !important;
-  box-sizing: content-box;
-}
-
-.outer-circle {
-  position: relative;
-  background: linear-gradient(#0a078d, #d4bf00, #f30101);
-  border-radius: 50%;
-  animation: rotate 1.5s linear infinite;
-  overflow: hidden;
-}
-
-.outer-circle span {
-  position: absolute;
-  
-  background: linear-gradient(#0a078d, #d4bf00, #f30101);
-  border-radius: 50%;
-}
-
-span:nth-child(1) {
-  filter: blur(5px);
-}
-
-span:nth-child(2) {
-  filter: blur(10px);
-}
-
-span:nth-child(3) {
-  filter: blur(25px);
-}
-
-span:nth-child(4) {
-  filter: blur(150px);
-}
-
-.inner-circle {
-  height: 90%;
-  width: 90%;
-  position: absolute;
-  background: black;
-  top: 10px;
-  left: 10px;
-  border-radius: 50%;
-  z-index: 9;
-  overflow: hidden;
-}
-
-@keyframes rotate {
-  0% {
-    filter: hue-rotate(0deg);
-  }
-  100% {
-    filter: hue-rotate(360deg);
-  }
-}
