--- a/lobby/css/main.css
+++ b/lobby/css/main.css
@@ -72,35 +72,28 @@ body {
 
   #video1 {
     /*margin: 0 20px 20px 0;*/
-    /*--width: 100%;
-    --height: 100%;*/
     top: 0px;
     left: 0px;
-    min-width: 100%;
-    max-height: 100%;
-    max-width: 100%;
     vertical-align:top;
-
+    width: 47%;
+    height: 100%;
+    margin-left: 26.5%;
+    margin-right: 26.5%;
+    
     
   }
 
-  #video2 {
+  .participantvideos {
     /*margin: 0 20px 20px 0;*/
     /*--width: 100%;
     --height: 100%;*/
-    min-width: 100%;
-    max-height: 100%;
-    max-width: 100%;
-  }
-  #video3 {
-    /*margin: 0 20px 20px 0;*/
-    /*--width: 100%;
-    --height: 100%;*/
-    min-width: 100%;
-    max-height: 100%;
-    max-width: 100%;
+    width: 150%;
+    height: 150%;
+
+
 
   }
+
 
   #participants {
     margin: 1vh;
@@ -108,23 +101,33 @@ body {
     position: absolute;
     top: 0;
     left: 50%;
-    margin-left: -11vh;
+    margin-left: -12vh;
+    overflow: hidden;
  }
 
 
 
   #Participant1 {  
+    display: flex;
+  justify-content: center;
+  align-items: center;
     float: left;
-    margin: 1vh;
     width: 10vh;
     height: 10vh;
+    margin: 5px;
+
+
 }
 
 #Participant2 {
-float: right;
-  margin: 1vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    
+  float: right;
 width: 10vh;
 height: 10vh;
+margin: 5px;
 
 }
 
@@ -208,31 +211,32 @@ height: 10vh;
         border: 0;        
         position: relative;
         font-size: 1.8vh;
-        
+        margin-top: 15px;
     left: 50%;
     margin-left:-75px;
     
     }
 
-    .outer_circle {
-      position: relative;
-      margin: 50px;
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      background: #ffffff;
-  }
-    
-  .inner_circle {
-      background-image: linear-gradient(
-               to bottom, rgb(9, 112, 26) 0%,
-               rgb(21, 255, 0) 100%);
-      content: '';
-      position: absolute;
-      top: -20px;
-      bottom: -20px;
-      right: -20px;
-      left: -20px;
-      z-index: -1;
-      border-radius: inherit;
-  }
+.circlerobot {
+
+    border-radius: 100%;
+    content: '';
+    background-image: linear-gradient(to bottom, #18253a 0%, #5c4e01 100%);
+    padding: 5px;
+    top: -5px;
+    left: -5px;
+    position:absolute;
+    z-index:-1;
+}
+
+.circleparticipants {
+
+  border-radius: 100%;
+  content: '';
+
+  padding: 5px;
+  top: -5px;
+  left: -5px;
+  overflow:hidden;
+  z-index:-1;
+}
