--- a/webrtc/public/index.css
+++ b/webrtc/public/index.css
@@ -1,3 +1,242 @@
-.width-100 {
+
+html {
+    
+    height: 100%;
+    width: 100%;  
+    background: linear-gradient( to bottom right, #18253a, #000000);
+
+}
+
+body {
+
+    height: 100%;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    
+  margin: auto;
+}
+
+/* Overskrift */
+
+#header {
+  height:9vh;
+  text-align: center;
+}
+
+#headertext {
+
+    display: block;
+    margin: auto;
+    text-align: center;
+    font-family: 'Inconsolata', monospace;
+    font-size: 5vh;
+    font-weight: bold;
+    letter-spacing: 5px;
+    background-image: linear-gradient(to right,
+          #462523 0,
+          #cb9b51 22%, 
+          #f6e27a 45%,
+          #f6f2c0 5%,
+          #f6e27a 55%,
+          #cb9b51 78%,
+          #462523 100%
+      );
+    color:transparent;
+    -webkit-background-clip:text;
+
+  }
+
+/* Design af knapper */
+
+  .webrtcbuttons {
+    width:70px;
+    
+
+  }
+
+
+  /* CSS for video */
+
+  #wrapall {
+
+    display: block;
+    align-items: center;
+    width: 98%;
+    left: 1%;
+    height: 70%;
+    /* background: green;*/
+    position:relative;
+    
+    
+  }
+
+  #video1 {
+    /*margin: 0 20px 20px 0;*/
+    top: 0px;
+    left: 0px;
+    vertical-align:top;
+    width: 47%;
+    height: 100%;
+    margin-left: 26.5%;
+    margin-right: 26.5%;
+    
+    
+  }
+
+  .participantvideos {
+    /*margin: 0 20px 20px 0;*/
+    /*--width: 100%;
+    --height: 100%;*/
+    width: 150%;
+    height: 150%;
+
+
+
+  }
+
+
+  #participants {
+    margin: 1vh;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -12vh;
+    overflow: hidden;
+ }
+
+
+
+  #Participant1 {  
+    display: flex;
+  justify-content: center;
+  align-items: center;
+    float: left;
+    width: 10vh;
+    height: 10vh;
+    margin: 5px;
+
+
+}
+
+#Participant2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    
+  float: right;
+width: 10vh;
+height: 10vh;
+margin: 5px;
+
+}
+
+/*
+  @media screen and (max-width: 400px) {
+      button {
+        margin: 0 11px 10px 0;
+      }
+
+      video {
+        height: 90px;
+        margin: 0 0 10px 0;
+        width: calc(50% - 8px);
+      }
+
+      video#video1 {
+        margin: 0 10px 10px 0;
+      }
+
+  }
+*/
+/* CSS for footer */
+
+#footer {
+  margin-top: 10vh;
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+  #thelostgold-footertext {
+      font-family: 'Inconsolata', monospace;
+      margin: auto;
+      
+      
+    font-size: 3vh;
+    font-weight: bold;
+    letter-spacing: 30px;
+    background-image: linear-gradient(
+    to right,
+    #462523 0,
+    #cb9b51 22%, 
+    #f6e27a 45%,
+    #f6f2c0 5%,
+    #f6e27a 55%,
+    #cb9b51 78%,
+    #462523 100%
+    );
+    color:transparent;
+    -webkit-background-clip:text;
+    }
+
+    #submarine {
+    margin-top: 100px;
+    position: absolute;
+    width: 60%;
+    
+    left: 45%;
+    margin-left:-100px;
+       
+    }
+
+    #fullscreenbutton {
+      width: 145px;
+      background-image: linear-gradient(
+        to right,
+        #462523 0,
+        #cb9b51 22%, 
+        #f6e27a 45%,
+        #f6f2c0 5%,
+        #f6e27a 55%,
+        #cb9b51 78%,
+        #462523 100%
+        );
+        color:transparent;
+        opacity: 0.7;
+
+        -webkit-background-clip:text;
+
+        font-weight: bold;
+        border: 0;        
+        position: relative;
+        font-size: 1.8vh;
+        margin-top: 15px;
+    left: 50%;
+    margin-left:-75px;
+    
+    }
+
+.circlerobot {
+
+    border-radius: 100%;
+    content: '';
+    background-image: linear-gradient(to bottom, #18253a 0%, #5c4e01 100%);
+    padding: 5px;
+    top: -5px;
+    left: -5px;
+    position:absolute;
+    z-index:-1;
+}
+
+.circleparticipants {
+
+  border-radius: 100%;
+  content: '';
+
+  padding: 5px;
+  top: -5px;
+  left: -5px;
+  overflow:hidden;
+  z-index:-1;
 }
